--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/post.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/post.scss
@@ -32,8 +32,8 @@
     justify-content: center;
     align-items: center;
 
-    .card {
-        width: 575px;
+    &__card {
+        width: 750px;
         margin: 5px;
     }
 
@@ -98,6 +98,7 @@
     }
 }
 
+
 .svg-inline--fa.fa-message.post__reaction_active {
     box-shadow: 2px 2px 2px 2px gray;
     color: green;
@@ -108,11 +109,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 10px 0;
 
     &__title {
         display: flex;
         flex-direction: row;
-        justify-content: start;
+        justify-content: center;
         width: 100%;
         margin: 5px -15px;
     }
@@ -121,5 +123,11 @@
         display: flex;
         align-items: center;
         gap: 20px;
+
+        .actions {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
     }
 }
