--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/addPeople.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/addPeople.scss
@@ -3,11 +3,14 @@
     flex-direction: column;
     align-items: center;
     padding: 5px;
+    width: 100%;
+    height: 100%;
 
     &__title {
         display: flex;
         align-items: center;
         margin: 10px;
+        font-weight: bold;
 
         svg {
             margin: 0 15px;
@@ -20,6 +23,11 @@
         &_active {
             display: flex;
             flex-direction: column;
+
+            .form-label {
+                display: flex;
+                justify-content: center;
+            }
         }
     }
 
@@ -56,6 +64,7 @@
         display: flex;
         justify-content: space-around;
         align-items: center;
+        font-weight: bold;
     }
 
     &__list {
@@ -88,6 +97,12 @@
                 font-size: 11px;
             }
         }
+    }
+
+    .divide {
+        width: 100%;
+        height: 5px;
+        background: #015666;
     }
 
     .person {
