--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/groupChat.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/groupChat.scss
@@ -8,10 +8,10 @@
             align-items: center;
             border-radius: 25px;
             right: 30%;
-            top: 15%;
+            top: 5%;
             padding: 10px;
             width: 500px;
-            min-height: 400px;
+            max-height: 600px;
             box-shadow: 5px 5px 5px 5px gray;
             background: white;
 
