--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/communityMenu.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/communityMenu.scss
@@ -74,7 +74,7 @@
         .members {
             display: flex;
             flex-direction: column;
-            justify-content: start;
+            justify-content: center;
             gap: 20px;
 
             &__title {
