--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/selectedCommunity.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/selectedCommunity.scss
@@ -109,6 +109,10 @@
         gap: 15px;
 
         .members {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
             &__title {
                 display: flex;
                 flex-direction: column;
@@ -152,6 +156,10 @@
                 margin: 10px 0;
             }
 
+            .all-people {
+                font-size: 12px;
+            }
+
             .add-people-to-community {
                 position: fixed;
                 display: flex;
@@ -159,13 +167,18 @@
                 justify-content: center;
                 align-items: center;
                 border-radius: 25px;
+                top: 5%;
                 right: 35%;
-                bottom: 20%;
                 padding: 10px;
                 width: 500px;
-                min-height: 400px;
+                max-height: 600px;
                 box-shadow: 5px 5px 5px 5px gray;
                 background: white;
+
+                .form-label {
+                    display: flex;
+                    justify-content: center;
+                }
 
                 .item-result {
                     display: flex;
