--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/members.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/members.scss
@@ -8,12 +8,18 @@
         gap: 20px;
         border-radius: 25px;
         right: 35%;
-        top: 20%;
+        top: 10%;
         padding: 15px 10px;
-        width: 300px;
-        min-height: 200px;
+        width: 350px;
+        max-height: 600px;
         box-shadow: 5px 5px 5px 5px gray;
         background: white;
+
+        .search {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
     }
 
     &__window {
@@ -23,6 +29,17 @@
         align-items: center;
         gap: 20px;
         width: 300px;
+        overflow-y: hidden;
+        max-height: 350px;
+    }
+
+    &__popup, &__window {
+        .divide {
+            width: 100%;
+            height: 5px;
+            margin-top: -10px;
+            background: #015666;
+        }
     }
 }
 
@@ -32,10 +49,9 @@
         justify-content: space-around;
         align-items: center;
         width: 50%;
+        font-weight: bold;
 
         .remove {
-            cursor: pointer;
-
             &_active {
                 color: orange;
                 transform: scale(1.25);
@@ -43,14 +59,15 @@
             }
         }
 
-        .remove:hover {
+        svg:hover {
+            cursor: pointer;
             transform: scale(1.25);
         }
     }
 
     .item-result {
         display: flex;
-        gap: 10px;
+        gap: 25px;
 
         input {
             font-size: 12px;
@@ -70,9 +87,11 @@
     .list {
         display: flex;
         flex-direction: column;
-        padding: 0;
-        margin: 0;
         gap: 10px;
+        margin-top: -15px;
+        width: 250px;
+        padding: 5px;
+        overflow-y: auto;
 
         .user-target-community {
             &__information {
