--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/communities.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/communities.scss
@@ -31,6 +31,7 @@
             .content {
                 display: flex;
                 justify-content: start;
+                align-items: center;
                 width: 75%;
             }
 
