--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/members.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/members.scss
@@ -98,6 +98,10 @@
                 display: flex;
                 align-items: center;
                 gap: 50px;
+
+                .form-check-input {
+                    box-shadow: 1px 1px 1px 1px gray;
+                }
             }
         }
     }
