--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/account/registration.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/account/registration.scss
@@ -7,4 +7,10 @@
         border-radius: 15px;
         background: yellow;
     }
+
+    .actions {
+        display: flex;
+        gap: 25px;
+        margin: 15px 0;
+    }
 }
