--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/navMenu.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/navMenu.scss
@@ -1,4 +1,6 @@
 ﻿a.navbar-brand {
+    display: flex;
+    align-items: center;
     white-space: normal;
     text-align: center;
     word-break: break-all;
