Improve site performance

--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/communities.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/communities.scss
@@ -66,6 +66,37 @@
 
                 .card {
                     width: 250px;
+                    border-radius: 30px;
+                    box-shadow: 3px 3px 3px 3px #C1C4EA;
+
+                    .links {
+                        display: flex;
+                        flex-direction: column;
+                        gap: 15px;
+                    }
+
+                    .open-community, .join-to-community {
+                        display: flex;
+
+                        &__content {
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            gap: 10px;
+                            width: 200px;
+                            padding: 5px 10px;
+                            border: 2px solid gray;
+                            border-radius: 15px;
+                            box-shadow: 3px 3px 3px 3px gray;
+                            cursor: pointer;
+                        }
+                    }
+
+                    .join-to-community {
+                        &__content {
+                            box-shadow: 3px 3px 3px 3px green;
+                        }
+                    }
                 }
             }
         }
