--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/home.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/home.scss
@@ -3,7 +3,9 @@
         position: fixed;
         display: flex;
         justify-content: center;
-        left: 40%;
+        text-align: center;
+        left: 35%;
         top: 0;
+        width: 500px;
     }
 }
