--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/communityMenu.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/communityMenu.scss
@@ -190,12 +190,17 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 10px;
     padding: 20px;
     width: 44%;
     border: 2px solid gray;
     border-radius: 25px;
     background: white;
     z-index: 5;
+
+    &__title {
+        font-weight: bold;
+    }
 
     .friend {
         display: flex;
