--- a/src/CombatAnalysis.WebApp/ClientApp/src/custom.css
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/custom.css
@@ -16,3 +16,14 @@ code {
   background-color: #1b6ec2;
   border-color: #1861ac;
 }
+
+.btn-shadow {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    padding: 5px 10px;
+    border: 2px solid gray;
+    border-radius: 15px;
+    box-shadow: 3px 3px 3px 3px gray;
+    cursor: pointer;
+}
