--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/combatGeneralDetails.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/combatGeneralDetails.scss
@@ -1,102 +1,128 @@
-﻿.general-details__container {
-    .card {
-        width: 75%;
-        box-shadow: 10px 10px gray;
-        margin: 25px;
+﻿.general-details {
+    &__container {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
 
-        .list-group {
-            display: flex;
-            flex-direction: row;
-        }
+        .card {
+            width: 75%;
+            box-shadow: 10px 10px gray;
+            margin: 25px;
 
-        .list-group-item {
-            display: flex;
-            align-items: center;
-            flex-direction: column;
-            width: 20%;
-            margin: 5px;
+            .list-group {
+                display: flex;
+                flex-direction: row;
+            }
 
-            div {
+            .list-group-item {
                 display: flex;
                 align-items: center;
-                width: auto;
-                height: 40px;
-            }
+                flex-direction: column;
+                width: 20%;
+                margin: 5px;
 
-            svg {
-                height: 20px;
-            }
+                div {
+                    display: flex;
+                    align-items: center;
+                    width: auto;
+                    height: 40px;
+                }
+
+                svg {
+                    height: 20px;
+                }
 
 
-            &__details {
-                width: 25px;
-                color: gray;
+                &__details {
+                    width: 25px;
+                    color: gray;
 
-                :hover {
-                    cursor: pointer;
-                    transform: scale(1.25);
+                    :hover {
+                        cursor: pointer;
+                        transform: scale(1.25);
+                    }
+                }
+
+                &__damage-done {
+                    color: saddlebrown;
+                }
+
+                &__heal-done {
+                    color: green;
+                }
+
+                &__damage-taken {
+                    color: darkorange;
+                }
+
+                &__energy-recovery {
+                    color: yellowgreen;
                 }
             }
 
-            &__damage-done {
-                color: saddlebrown;
+            .form-check {
+                margin: 15px;
+            }
+        }
+
+        &_radial-chart {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin: 10px;
+
+            div {
+                font-family: 'Comic Sans MS';
             }
 
-            &__heal-done {
-                color: green;
-            }
-
-            &__damage-taken {
-                color: darkorange;
-            }
-
-            &__energy-recovery {
-                color: yellowgreen;
+            .title {
+                font-size: 1.5em;
+                margin-left: -200px;
             }
         }
 
         .form-check {
-            margin: 15px;
+            margin: 20px;
+        }
+
+        .btn-shadow.active {
+            box-shadow: 4px 4px 4px 4px green;
         }
     }
 
-
-    &_navigate {
+    &__navigate {
         display: flex;
+        justify-content: space-between;
+        gap: 25px;
 
-        div, h3 {
-            margin: 5px;
-        }
-
-        button {
-            margin: 0 0 10px 15px;
-            box-shadow: 5px 5px 5px 5px grey;
-        }
-    }
-
-    &_radial-chart {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin: 10px;
-
-        div {
-            font-family: 'Comic Sans MS';
-        }
-
-        .title {
-            font-size: 1.5em;
-            margin-left: -200px;
-        }
-    }
-
-    .form-check {
-        margin: 20px;
-    }
-
-    .nav-tabs {
-        &:hover {
+        .nav-tabs {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
             cursor: pointer;
+        }
+
+        .username.btn-shadow {
+            box-shadow: 3px 3px 3px 3px blue;
+            font-weight: bold;
+        }
+
+        .details-type {
+            font-weight: bold;
+            font-family: 'Comic Sans MS';
+            font-size: 20px;
+        }
+    }
+
+    &__radial-chart {
+        .title {
+            text-align: center;
+            font-size: 20px;
+        }
+
+        .recharts-responsive-container {
+            margin: 25px 0;
+            font-size: 12px;
         }
     }
 }
