--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/userInformation.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/userInformation.scss
@@ -44,11 +44,11 @@
 
         svg {
             padding: 10px;
-        }
 
-        svg:hover {
-            cursor: pointer;
-            transform: scale(1.25);
+            &:hover {
+                cursor: pointer;
+                transform: scale(1.25);
+            }
         }
     }
 
