--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/communityMenu.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/communityMenu.scss
@@ -59,12 +59,28 @@
         padding: 0;
     }
 
+    .close {
+        display: flex;
+        align-items: start;
+        padding: 5px;
+        margin-top: -20px;
+
+        svg {
+            &:hover {
+                cursor: pointer;
+                transform: scale(1.25);
+            }
+        }
+    }
+
     &__items {
         flex-grow: 1;
         display: flex;
         flex-direction: column;
         align-items: center;
         margin: 5px;
+
+
 
         .form-group {
             margin: 10px;
