--- a/src/CombatAnalysis.App/Views/CombatLogInformationView.xaml
+++ b/src/CombatAnalysis.App/Views/CombatLogInformationView.xaml
@@ -195,9 +195,9 @@
                        Visibility="{Binding IsParsing, Converter={StaticResource BoolToVisibility}}" />
         </StackPanel>
         <StackPanel Visibility="{Binding CombatLogUploadingFailed, Converter={StaticResource BoolToVisibility}}"  Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="2" VerticalAlignment="Bottom">
-            <TextBlock Text="Combat log uploading failed!" FontSize="16" TextAlignment="Center" TextWrapping="Wrap"
+            <TextBlock Text="{loc:Loc CombatLogUploadingFailed}" FontSize="16" TextAlignment="Center" TextWrapping="Wrap"
                        Margin="0" VerticalAlignment="Center" Height="60" MaxWidth="650" Foreground="Red" />
-            <Button Content="Repeat" FontSize="14" Width="100" Foreground="BlueViolet" Style="{StaticResource showButton}" mvx:Bi.nd="Command OpenPlayerAnalysisCommand" />
+            <Button Content="{loc:Loc Repeat}" FontSize="14" Width="100" Foreground="BlueViolet" Style="{StaticResource showButton}" mvx:Bi.nd="Command OpenPlayerAnalysisCommand" />
         </StackPanel>
     </Grid>
 </views:MvxWpfView>
