--- a/src/CombatAnalysis.App/Views/CombatLogInformationView.xaml
+++ b/src/CombatAnalysis.App/Views/CombatLogInformationView.xaml
@@ -91,7 +91,7 @@
                                            Visibility="{Binding CombatLogLoadingStatus, Converter={StaticResource IntToVisibility}, ConverterParameter='true:1:='}"/>
                                 <TextBlock Text="{loc:Loc LoadingFailed}" Foreground="Orange" HorizontalAlignment="Center" Margin="0 10"
                                            Visibility="{Binding CombatLogLoadingStatus, Converter={StaticResource IntToVisibility}, ConverterParameter='true:3:='}"/>
-                                <StackPanel Orientation="Horizontal">
+                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                                     <TextBlock HorizontalAlignment="Center" Text="{loc:Loc PublicLogs}" Margin="0" FontSize="16" />
                                     <Button Style="{StaticResource userButton}" Margin="5 -10" mvx:Bi.nd="Command ReloadCombatsCommand" ToolTip="{Binding RefreshLogs}"
                                             IsEnabled="{Binding IsParsing, Converter={StaticResource BoolToXAMLBool},ConverterParameter=true}">
@@ -130,27 +130,27 @@
                                            Visibility="{Binding CombatLogByUserLoadingStatus, Converter={StaticResource IntToVisibility}, ConverterParameter='true:1:='}"/>
                                 <TextBlock Text="{loc:Loc LoadingFailed}" Foreground="Orange" HorizontalAlignment="Center" Margin="0 10"
                                            Visibility="{Binding CombatLogByUserLoadingStatus, Converter={StaticResource IntToVisibility}, ConverterParameter='true:3:='}"/>
-                                <StackPanel Orientation="Horizontal">
+                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                                     <TextBlock HorizontalAlignment="Center" Text="{loc:Loc PrivateLogs}" Margin="0" FontSize="16" />
                                     <Button Style="{StaticResource userButton}" Margin="5 -10" mvx:Bi.nd="Command ReloadCombatsByUserCommand" ToolTip="{loc:Loc RefreshLogs}">
                                         <Icon:PackIconMaterial Kind="Reload" Foreground="Gray"/>
                                     </Button>
                                 </StackPanel>
-                                <StackPanel Orientation="Horizontal" Width="250">
+                                <StackPanel Orientation="Horizontal" Width="250" IsEnabled="{Binding RemovingInProgress, Converter={StaticResource BoolToXAMLBool}, ConverterParameter=true}">
                                     <Button mvx:Bi.nd="Command LoadCombatsByUserCommand" Content="{loc:Loc Upload}" Width="100" FontSize="16"
-                                            Visibility="{Binding CombatLogsByUser.Count, Converter={StaticResource IntToVisibility}, ConverterParameter='true:0:>'}"
+                                            Visibility="{Binding CombatLogsForTargetUser.Count, Converter={StaticResource IntToVisibility}, ConverterParameter='true:0:>'}"
                                             IsEnabled="{Binding CombatListSelectedIndex, Converter={StaticResource IntToXAMLBool}, ConverterParameter='-1:>'}"
                                             Margin="10,10" Style="{StaticResource showButton}" Foreground="Blue" HorizontalAlignment="Center"/>
                                     <Icon:PackIconMaterial Kind="Delete" Foreground="Orange" Style="{StaticResource menuButtonIcon}" 
-                                                           Visibility="{Binding CombatLogsByUser.Count, Converter={StaticResource IntToVisibility}, ConverterParameter='true:0:>'}" mvx:Bi.nd="Command DeleteCombatCommand"
-                                                           HorizontalAlignment="Center" ToolTip="{loc:Loc RefreshLogs}">
+                                                           Visibility="{Binding CombatLogsForTargetUser.Count, Converter={StaticResource IntToVisibility}, ConverterParameter='true:0:>'}" mvx:Bi.nd="Command DeleteCombatCommand"
+                                                           HorizontalAlignment="Center" ToolTip="{loc:Loc RemovePrivateLog}">
                                         <Icon:PackIconMaterial.InputBindings>
                                             <MouseBinding Command="{Binding DeleteCombatCommand}" Gesture="LeftClick"/>
                                         </Icon:PackIconMaterial.InputBindings>
                                     </Icon:PackIconMaterial>
                                 </StackPanel>
-                                <ListBox Background="Transparent" ItemsSource="{Binding CombatLogsByUser}" SelectedIndex="{Binding CombatListSelectedIndex}"
-                                        Visibility="{Binding CombatLogsByUser.Count, Converter={StaticResource IntToVisibility}, ConverterParameter='true:0:>'}">
+                                <ListBox Background="Transparent" ItemsSource="{Binding CombatLogsForTargetUser}" SelectedIndex="{Binding CombatListSelectedIndex}"
+                                        Visibility="{Binding CombatLogsForTargetUser.Count, Converter={StaticResource IntToVisibility}, ConverterParameter='true:0:>'}">
                                     <ListBox.ItemTemplate>
                                         <DataTemplate>
                                             <StackPanel Margin="10" Orientation="Horizontal" HorizontalAlignment="Center">
@@ -162,8 +162,10 @@
                                 </ListBox>
                                 <StackPanel Visibility="{Binding CombatLogByUserLoadingStatus, Converter={StaticResource IntToVisibility}, ConverterParameter='true:2:='}">
                                     <TextBlock Text="{loc:Loc Empty}" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="Gray" Margin="5"
-                                           Visibility="{Binding CombatLogsByUser.Count, Converter={StaticResource IntToVisibility}, ConverterParameter='true:0:='}"/>
+                                           Visibility="{Binding CombatLogsForTargetUser.Count, Converter={StaticResource IntToVisibility}, ConverterParameter='true:0:='}"/>
                                 </StackPanel>
+                                <TextBlock Text="{loc:Loc RemovingInProgress}" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="Gray" Margin="5"
+                                            Visibility="{Binding RemovingInProgress, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:false}"/>
                             </StackPanel>
                         </ScrollViewer>
                     </StackPanel>
